[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/battle/ui/main/EnemyCommandPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GuiSketch.gd" type="Script" id=2]
[ext_resource path="res://scenes/battle/minions/MinionRow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/battle/ui/actions/ActionPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/battle/ui/main/EnemyNameplate.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/battle/ui/main/PlayerCommandPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/battle/ui/main/PlayerNameplate.tscn" type="PackedScene" id=7]

[node name="GUISketch" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 360, 640 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.839216, 0.690196, 0.290196, 1 )

[node name="BattleField" type="VBoxContainer" parent="."]
margin_right = 360.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="EnemyNameplate" parent="BattleField" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 360.0

[node name="EnemyCommandPanel" parent="BattleField" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 32.0
margin_right = 360.0
margin_bottom = 198.0

[node name="Center" type="MarginContainer" parent="BattleField"]
margin_top = 198.0
margin_right = 360.0
margin_bottom = 442.0
size_flags_vertical = 3
custom_constants/margin_top = 32

[node name="MinionField" type="VBoxContainer" parent="BattleField/Center"]
margin_top = 32.0
margin_right = 360.0
margin_bottom = 244.0

[node name="Top" parent="BattleField/Center/MinionField" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 360.0
margin_bottom = 96.0
size_flags_vertical = 4

[node name="Bottom" parent="BattleField/Center/MinionField" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 100.0
margin_right = 360.0
margin_bottom = 196.0

[node name="PlayerCommandPanel" parent="BattleField" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 442.0
margin_right = 360.0
margin_bottom = 608.0

[node name="PlayerNameplate" parent="BattleField" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 608.0
margin_right = 360.0
margin_bottom = 640.0

[node name="Layer2" type="VBoxContainer" parent="."]
visible = false
margin_right = 360.0
margin_bottom = 640.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2

[node name="Spacer" type="Control" parent="Layer2"]
margin_right = 360.0
margin_bottom = 361.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ActionPanel" parent="Layer2" instance=ExtResource( 4 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 361.0
margin_right = 360.0
margin_bottom = 640.0

[node name="Layer3" type="CenterContainer" parent="."]
visible = false
margin_right = 360.0
margin_bottom = 640.0
mouse_filter = 2

[node name="Confirm" type="ConfirmationDialog" parent="Layer3"]
margin_left = 80.0
margin_top = 285.0
margin_right = 280.0
margin_bottom = 355.0
popup_exclusive = true
window_title = "End Turn"
dialog_text = "End your turn?"
dialog_autowrap = true

[connection signal="check_army_left" from="BattleField/PlayerCommandPanel" to="." method="_on_PlayerCommandPanel_check_army_left"]
[connection signal="check_army_right" from="BattleField/PlayerCommandPanel" to="." method="_on_PlayerCommandPanel_check_army_right"]
[connection signal="check_support" from="BattleField/PlayerCommandPanel" to="." method="_on_PlayerCommandPanel_check_support"]
[connection signal="cancel_action" from="Layer2/ActionPanel" to="." method="_on_cancel_action"]
